add_subdirectory( ARToolKit )
add_subdirectory( Audio )
add_subdirectory( Colour )
add_subdirectory( Core )
add_subdirectory( dlib )
add_subdirectory( ffmpeg )
add_subdirectory( FFTW )
add_subdirectory( File )
add_subdirectory( Firmata )
add_subdirectory( Freeframe )
add_subdirectory( Geometry )
add_subdirectory( GUI )
add_subdirectory( Image )
add_subdirectory( ISF )
add_subdirectory( Kinect )
add_subdirectory( LeapMotion )
add_subdirectory( Lua )
add_subdirectory( LuaQt )
add_subdirectory( Math )
add_subdirectory( MIDI )
add_subdirectory( NDI )
add_subdirectory( Network )
add_subdirectory( OculusRift )
add_subdirectory( OpenCV )
add_subdirectory( OpenGL )
add_subdirectory( OSC )
add_subdirectory( Painter )
add_subdirectory( PortAudio )
add_subdirectory( PortMidi )
add_subdirectory( RaspberryPi )
add_subdirectory( Serial )
add_subdirectory( Spout )
add_subdirectory( Syphon )
add_subdirectory( Text )
add_subdirectory( Time )
add_subdirectory( VideoCapture )
add_subdirectory( VST )
add_subdirectory( XInput )
